; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-stat-util.c_test_path_is_fs_type.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-stat-util.c_test_path_is_fs_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"/run\00", align 1
@AT_SYMLINK_FOLLOW = common dso_local global i32 0, align 4
@TMPFS_MAGIC = common dso_local global i32 0, align 4
@BTRFS_SUPER_MAGIC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"/proc\00", align 1
@PROC_SUPER_MAGIC = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [14 x i8] c"/i-dont-exist\00", align 1
@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_path_is_fs_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_path_is_fs_type() #0 {
  %1 = load i32, i32* @AT_SYMLINK_FOLLOW, align 4
  %2 = call i64 @path_is_mount_point(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* null, i32 %1)
  %3 = icmp sgt i64 %2, 0
  br i1 %3, label %4, label %15

4:                                                ; preds = %0
  %5 = load i32, i32* @TMPFS_MAGIC, align 4
  %6 = call i32 @path_is_fs_type(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = icmp sgt i32 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert_se(i32 %8)
  %10 = load i32, i32* @BTRFS_SUPER_MAGIC, align 4
  %11 = call i32 @path_is_fs_type(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = icmp eq i32 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert_se(i32 %13)
  br label %15

15:                                               ; preds = %4, %0
  %16 = load i32, i32* @PROC_SUPER_MAGIC, align 4
  %17 = call i32 @path_is_fs_type(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %16)
  %18 = icmp sgt i32 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert_se(i32 %19)
  %21 = load i32, i32* @BTRFS_SUPER_MAGIC, align 4
  %22 = call i32 @path_is_fs_type(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  %23 = icmp eq i32 %22, 0
  %24 = zext i1 %23 to i32
  %25 = call i32 @assert_se(i32 %24)
  %26 = load i32, i32* @BTRFS_SUPER_MAGIC, align 4
  %27 = call i32 @path_is_fs_type(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i32 %26)
  %28 = load i32, i32* @ENOENT, align 4
  %29 = sub nsw i32 0, %28
  %30 = icmp eq i32 %27, %29
  %31 = zext i1 %30 to i32
  %32 = call i32 @assert_se(i32 %31)
  ret void
}

declare dso_local i64 @path_is_mount_point(i8*, i32*, i32) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @path_is_fs_type(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
